# razor_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/src/: main.c
razor/: CMakeLists.txt
razor/include/: razor.h  re_core.h  re_debug.h  re_graphics.h  re_utils.h
razor/src/: razor.c  re_internals.h
razor/src/core/: re_core.c  re_utility.c  re_vulkan_window.h
razor/src/core/win32/: re_win32.c  re_win32.h  re_win32_memory.c  re_win32_window.c
razor/src/debug/: re_logging.c
razor/src/graphics/: re_graphics.c  re_graphics_backend.c  re_graphics_context.c  re_graphics_context.h  re_graphics_internal_backend.h  re_graphics_types.h  re_rhi.h
razor/src/graphics/vulkan/: re_device_layer.c  re_device_layer.h  re_swap_chain_layer.c  re_swap_chain_layer.h  re_vulkan.c  re_vulkan.h  re_vulkan_backend.c  re_vulkan_backend.h  re_vulkan_device_layer.c  re_vulkan_device_layer.h  re_vulkan_queues.c  re_vulkan_queues.h  re_vulkan_swap_chain_layer.c  re_vulkan_swap_chain_layer.h  re_vulkan_types.h  re_vulkan_utils.c  re_vulkan_utils.h
razor/src/memory/: re_win32_heap_allocation.c
razor/src/utils/: re_str_utils.c
razor/src/windows/: re_vulkan_window.h  re_win32_window.c
